fix: touch action mobile

--- a/src/index.css
+++ b/src/index.css
@@ -124,4 +124,6 @@ button {
   user-select: none;
   -webkit-user-select: none;
   -ms-user-select: none;
+  -webkit-tap-highlight-color: transparent;
+  touch-action: manipulation;
 }
